[package]
name = "zetarune"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["debug", "display"] }
dirs = "6.0.0"
gilrs = "0.11.1"
macroquad = "0.4.14"
paste = "1.0.15"
postcard = { version = "1.1.3", features = ["use-std"] }
rfd = "0.17.2"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
ignore_without_reason = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
panic = "warn"
unwrap_used = "warn"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
