[package]
name = "zetarune"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["debug", "display"] }
dirs = "6.0.0"
gilrs = { version = "0.11.1", features = ["serde", "serde-serialize"] }
image = "0.25.10"
libgm = { git = "https://github.com/BioTomateDE/LibGM", version = "0.5.0-alpha" }
macroquad = "0.4.14"
paste = "1.0.15"
postcard = { version = "1.1.3", features = ["use-std"] }
qoi = { git = "https://github.com/aldanor/qoi-rust", version = "0.4.1" }
rfd = "0.17.2"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
zetarune-proc = { path = "zetarune-proc" }

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
ignore_without_reason = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
panic = "warn"
unwrap_used = "warn"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
