[package]
name = "zetarune-proc"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
syn = "2.0.117"

[lib]
proc-macro = true

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
ignore_without_reason = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
panic = "warn"
unwrap_used = "warn"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"
